--- a/src/main/frontend/src/App.css
+++ b/src/main/frontend/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Spoqa+Han+Sans&display=swap');
+
+body, html {
+    font-family: 'Spoqa Han Sans', sans-serif;
+}
+
 .App {
     text-align: center;
 }
