--- a/src/main/frontend/src/components/Card.css
+++ b/src/main/frontend/src/components/Card.css
@@ -4,24 +4,27 @@
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 200px;
-    height: 150px;
+    height: 100px;
     margin: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-size: 16px;
+    font-family: 'Spoqa Han Sans', sans-serif;
 }
 
 .card.abnormal {
-    border: 2px solid red;
+    /*border: 2px solid red;*/
+    background-color: #efaaaa;
+}
+
+
+.card.normal {
+    /*border: 2px solid green;*/
+    background-color: #b6f6b6;
 }
 
 .card-status {
-    font-size: 14px;
-    color: green;
-}
-
-.card.abnormal .card-status {
-    color: red;
+    font-size: 20px;
 }
