--- a/src/main/frontend/src/components/HealthResult.css
+++ b/src/main/frontend/src/components/HealthResult.css
@@ -1,13 +1,12 @@
 .health-result {
     text-align: center;
-    padding: 20px;
-
 }
 
 .user-status {
     font-size: 24px;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    color: #99daff;
 }
 
 .cards-container {
@@ -19,6 +18,5 @@
     border-radius: 10px;
     max-width: 960px;
     margin: 0 auto;
-    height: 500px;
-
+    margin-bottom: 60px !important;
 }
