--- a/src/main/frontend/src/components/ImageUpload.css
+++ b/src/main/frontend/src/components/ImageUpload.css
@@ -31,8 +31,9 @@
 
 .uploadInfo {
     margin-top: 30px;
-    font-size: 50px;
-    font-weight: 500;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: 'Spoqa Han Sans', sans-serif;
 }
 
 .imageicon {
