--- a/src/main/frontend/src/components/Loading.css
+++ b/src/main/frontend/src/components/Loading.css
@@ -6,7 +6,7 @@
     height: 100%;
     font-family: "Noto Sans", sans-serif;
     font-size: 40px;
-    color: white;
+    background-color: #99daff;
 }
 
 .loading-text {
