--- a/src/main/frontend/src/components/Sheet.css
+++ b/src/main/frontend/src/components/Sheet.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     padding: 30px 20px 10px 20px;
-    font-family: "Noto Sans", sans-serif;
+    font-family: 'Spoqa Han Sans', sans-serif;
 }
 
 .sheet {
@@ -27,8 +27,8 @@
 
 .text_sheet {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     flex: 1;
 }
