--- a/src/main/frontend/src/components/Sheet.css
+++ b/src/main/frontend/src/components/Sheet.css
@@ -39,3 +39,21 @@
     margin-left: 200px;
     white-space: nowrap;
 }
+
+.goButton {
+    background-color: #FFFCB9;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: 'Spoqa Han Sans', sans-serif;
+    cursor: pointer;
+    margin-top: 20px;
+    transition: background-color 0.3s ease;
+    margin-bottom: 60px;
+}
+
+.goButton:hover {
+    background-color: #fdf76a;
+}
