--- a/src/main/frontend/src/components/Card.css
+++ b/src/main/frontend/src/components/Card.css
@@ -11,6 +11,7 @@
     justify-content: center;
     align-items: center;
     font-size: 16px;
+    font-weight: bold;
     font-family: 'Spoqa Han Sans', sans-serif;
 }
 
