--- a/src/main/frontend/src/components/HealthResult.css
+++ b/src/main/frontend/src/components/HealthResult.css
@@ -32,6 +32,7 @@
     margin-top: 20px;
     transition: background-color 0.3s ease;
     margin-bottom: 60px;
+    font-family: 'Spoqa Han Sans', sans-serif;
 }
 
 .next-button:hover {
