recommend 배열 수정,폰트 수정

--- a/src/main/frontend/src/components/Loading.css
+++ b/src/main/frontend/src/components/Loading.css
@@ -4,13 +4,14 @@
     align-items: center;
     justify-content: center;
     height: 100%;
-    font-family: "Noto Sans", sans-serif;
+    font-weight: bold;
     font-size: 40px;
     background-color: #99daff;
 }
 
 .loading-text {
     margin-bottom: 40px;
+    color: white;
 }
 
 .spinner {
