--- a/src/main/frontend/src/components/Card.css
+++ b/src/main/frontend/src/components/Card.css
@@ -11,7 +11,10 @@
     justify-content: center;
     align-items: center;
     font-size: 16px;
-    font-family: 'Spoqa Han Sans', sans-serif;
+}
+
+.card:hover {
+    transform: translateY(-5px);
 }
 
 .card.abnormal {
