--- a/src/main/frontend/src/components/HealthResult.css
+++ b/src/main/frontend/src/components/HealthResult.css
@@ -3,9 +3,9 @@
 }
 
 .user-status {
-    font-size: 24px;
+    font-size: 35px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     color: #99daff;
 }
 
@@ -19,6 +19,9 @@
     max-width: 960px;
     margin: 0 auto;
     margin-bottom: 20px !important;
+}
+.recommend-card:hover {
+    transform: translateY(-5px); /* 호버 시 카드가 약간 위로 움직입니다 */
 }
 
 .next-button {
