--- a/src/main/frontend/src/components/Header.css
+++ b/src/main/frontend/src/components/Header.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px 40px 20px 40px;
-    background-color: #f8f9fa;
+    background-color: white;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
     z-index: 1000;
     font-family: 'Spoqa Han Sans', sans-serif;
